--- a/index.html
+++ b/index.html
@@ -39,41 +39,77 @@
             <div>
               <!-- Class -->
               <div class="head title">Experience</div>
-              <!-- IBM Internship experience -->
               <hr />
               <div class="experience-title">
-                <strong class="title">Wave Learning Festival</strong> - <a href = "https://www.wavelf.org/" target="_blank"> wavelf.org</a> - 
-                <i>Developer</i>
+                <strong class="title">IBM</strong>, San Jose, CA -
+                <i>Software Developer Intern</i>
               </div>
-              <div class="small">September 2020 - Current</div>
-              <div class="small"><i>Online education platform serving 15,000+ students from all 50 US states in response to educational inequities exacerbated by the COVID-19 pandemic. Providing 500+ diverse, free, live courses, 3000+ hours of tutoring, college pathways, and career mentorship.</i> </div>
+              <div class="small">May 2024 - August 2024</div>
               <ul class="experience-list">
                 <li>
-                  Develop pages and components for the website deployed on AWS amplify
+                  Developed Datasift, a low-code, no-code platform for ingesting
+                  and processing unstructured data, including sharepoint,
+                  filenet, powerpoint and pdf documents, into vectorized
+                  embeddings, for use in optimized RAG workflows, chatbot
+                  assistants, and other AI applications
                 </li>
                 <li>
-                  Improve user experience with automated forms and new features. 
+                  Implemented a server-based Data Access Layer to manage and
+                  stream embeddings across various ingest and processing
+                  operations
                 </li>
                 <li>
-                  Creating automation test cases with CypressJS and Cucumber BDD testing tools.
+                  Designed vectorized embedding process for Pinecone DB for use
+                  in Large Language Models
                 </li>
               </ul>
               <hr />
               <div class="experience-title">
-                <strong class="title">IBM Internship</strong>, Littleton,
-                MA -
-                <i>Frontend Developer Intern</i>
+                <strong class="title">Boston University</strong>, Boston, MA -
+                <i>Course Assistant</i>
               </div>
-              <div class="small">July 2020 - August 2020</div>
+              <div class="small">September 2023 - Present</div>
               <ul class="experience-list">
                 <li>
-                  Implemented automation test cases with CodeceptJS and Selenium for the IBM Security Insights product
+                  Instruct students in Discrete Math(CS 131) and Linear
+                  Algebra(CS 132)
                 </li>
                 <li>
-                  Fixed product UI defects, Translation Verification Test(TVT) defects, and Accessibility Verification Test(AVT) defects. 
+                  Lead discussion and lab sections, hold office hours, and grade
+                  assignments
+                </li>
+              </ul>
+
+              <hr />
+              <div class="experience-title">
+                <strong class="title">Wave Learning Festival</strong> -
+                <a href="https://www.wavelf.org/" target="_blank">
+                  wavelf.org</a
+                >
+                -
+                <i>Developer</i>
+              </div>
+              <div class="small">September 2020 - January 2022</div>
+              <div class="small">
+                <i
+                  >Online education platform serving 15,000+ students from all
+                  50 US states in response to educational inequities exacerbated
+                  by the COVID-19 pandemic. Providing 500+ diverse, free, live
+                  courses, 3000+ hours of tutoring, college pathways, and career
+                  mentorship.</i
+                >
+              </div>
+              <ul class="experience-list">
+                <li>
+                  Develop pages and components for the website deployed on AWS
+                  amplify
                 </li>
                 <li>
-                  Created UI Components for new product features(Technology used: ReactJS, SCSS, Carbon Design Systems) 
+                  Improve user experience with automated forms and new features.
+                </li>
+                <li>
+                  Creating automation test cases with CypressJS and Cucumber BDD
+                  testing tools.
                 </li>
               </ul>
               <hr />
@@ -119,69 +155,45 @@
               </div>
               <div class="small">September 2018 - June 2019</div>
               <ul class="experience-list">
-                <li>
-                  Helped students develop Math and Chinese skills
-                </li>
+                <li>Helped students develop Math and Chinese skills</li>
                 <li>Assisted teachers in educating young students</li>
-                <li>
-                  Aided teachers to create fun learning environments
-                </li>
+                <li>Aided teachers to create fun learning environments</li>
               </ul>
-              
             </div>
-            
           </div>
           <div class="col-sm-5">
             <div class="head title">Skills</div>
             <hr />
             <div class="skills">
+              <div class="skill">Python, Tensorflow, Data science tools</div>
+              <div class="skill">Java</div>
+              <div class="skill">C</div>
               <div class="skill">HTML, CSS, JavaScript</div>
               <div class="skill">React</div>
               <div class="skill">CodeceptJS</div>
               <div class="skill">JQuery</div>
               <div class="skill">JSON</div>
               <div class="skill">Git, Github</div>
+              <div class="skill">AWS</div>
               <div class="skill">Jira systems</div>
               <div class="skill">Bootstrap, Carbon Design Systems</div>
             </div>
             <hr />
-            <div class="head title">Awards</div>
-            <hr />
-            <div class="awards">
-              <div>
-                <strong> Seal of Civic Action</strong>
-                <br />
-                - Dedication and commitment to civic life and service while a student at Newton North High School
-              </div>
-              <div>
-                <strong
-                  >Newton Chinese Language School Outstanding Teaching Assistant Award</strong
-                >
-                <br />
-                - An award for exemplary service and work for the school
-              </div>
-              <div>
-                <strong> National Piano Guild Auditions Local Member </strong>
-                <br />
-                - Advanced D level
-              </div>
-              <div>
-                <strong> President's Volunteer Service Award, Gold</strong>
-                <br />
-                - 100+ hours of volunteer service for the community
-              </div>
-            </div>
-            <hr />
+
             <!-- Education -->
             <div class="head title">Education</div>
             <hr />
             <div class="experience-title">
+              <strong class="title">Boston university</strong>, Boston, MA -
+              <i>Expected 2026</i>
+            </div>
+            <div class="small">BA/MS in Computer Science</div>
+            <div class="experience-title">
               <strong class="title">Newton North High School</strong>, Newton,
               MA -
-              <i>Expected 2022</i>
+              <i>2018-2022</i>
             </div>
-            <div class="small">Senior</div>
-            <hr/>
+            <hr />
           </div>
         </div>
       </div>
