--- a/assignments.html
+++ b/assignments.html
@@ -25,6 +25,9 @@
             the files on my computer, imported it into github, and
             updated/rewrote everything to the standard of the class.
           </div>
+          <a href="https://github.com/charlesli50/cli50-assignment-0"
+            >https://github.com/charlesli50/cli50-assignment-0</a
+          >
         </li>
       </ul>
     </div>
