--- a/work_experience.html
+++ b/work_experience.html
@@ -14,6 +14,15 @@
     />
   </head>
   <body>
-    <div class="container">hello world</div>
+    <div class="container">
+      <div class="display-2 title">Work Experience!</div>
+      <div>I have previously worked at:</div>
+      <ul class="experience-list">
+        <li>Boston University</li>
+        <li>IBM</li>
+        <li><a href="wavelf.org">Wave Learning Festival</a></li>
+        <li>Newton City Center</li>
+      </ul>
+    </div>
   </body>
 </html>
