changing github link for assign 0

--- a/assignments.html
+++ b/assignments.html
@@ -26,7 +26,7 @@
             updated/rewrote everything to the standard of the class.
           </div>
           <a href="https://github.com/charlesli50/cli50-assignment-0"
-            >https://github.com/charlesli50/cli50-assignment-0</a
+            >Github Link</a
           >
         </li>
       </ul>
