--- a/assignments.html
+++ b/assignments.html
@@ -29,6 +29,20 @@
             >Github Link</a
           >
         </li>
+        <li>
+          <div class="text-xl">Assignment 1:</div>
+          <div>
+            A lot of the trouble I had was of remembering python syntax.
+            However, it was also rather difficult to understand if what I was
+            doing was correct, given the very tight margins that the data
+            beheld. I believe my answer is still correct, but I wouldn't doubt
+            if it was simply a result of fudged data. I still had fun doing this
+            assignment though.
+          </div>
+          <a href="https://github.com/charlesli50/cli50-assignment-1"
+            >Github Link</a
+          >
+        </li>
       </ul>
     </div>
   </body>
