--- a/assignments.html
+++ b/assignments.html
@@ -43,6 +43,18 @@
             >Github Link</a
           >
         </li>
+        <li>
+          <div class="text-xl">Assignment 2:</div>
+          <div>
+            <video width="640" height="360" controls>
+              <source src="./assign2recording.mov" type="video/mov" />
+              Your browser does not support the video tag.
+            </video>
+          </div>
+          <a href="https://github.com/charlesli50/cli50-assignment-2"
+            >Github Link</a
+          >
+        </li>
       </ul>
     </div>
   </body>
