moved to a youtube embed

--- a/assignments.html
+++ b/assignments.html
@@ -46,10 +46,15 @@
         <li>
           <div class="text-xl">Assignment 2:</div>
           <div>
-            <video width="640" height="360" controls>
-              <source src="./assign2recording.mov" type="video/mov" />
-              Your browser does not support the video tag.
-            </video>
+            <iframe
+              width="640"
+              height="315"
+              src="https://www.youtube.com/embed/6zkQtcLI0a0"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+              allowfullscreen
+            >
+            </iframe>
           </div>
           <a href="https://github.com/charlesli50/cli50-assignment-2"
             >Github Link</a
