--- a/assignments.html
+++ b/assignments.html
@@ -60,6 +60,16 @@
             >Github Link</a
           >
         </li>
+        <li>
+          <div class="text-xl">Assignment 3:</div>
+          <div>
+            I primarily had issues remembering the linalg basis of SVD. Once it
+            came back to me, it was very intuitive and fast.
+          </div>
+          <a href="https://github.com/charlesli50/cli50-assignment-3"
+            >Github Link</a
+          >
+        </li>
       </ul>
     </div>
   </body>
