--- a/assignments.html
+++ b/assignments.html
@@ -70,6 +70,27 @@
             >Github Link</a
           >
         </li>
+
+        <!-- https://youtu.be/8VM2wTnSdEE -->
+
+        <li>
+          <div class="text-xl">Assignment 4:</div>
+          <div>
+            <iframe
+              width="640"
+              height="315"
+              src="https://www.youtube.com/embed/8VM2wTnSdEE?si=hmcGAaRqqUPIGX8g"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              referrerpolicy="strict-origin-when-cross-origin"
+              allowfullscreen
+            ></iframe>
+          </div>
+          <a href="https://github.com/charlesli50/cli50-assignment-4"
+            >Github Link</a
+          >
+        </li>
       </ul>
     </div>
   </body>
