--- a/assignments.html
+++ b/assignments.html
@@ -91,6 +91,16 @@
             >Github Link</a
           >
         </li>
+        <li>
+          <div class="text-xl">Assignment 5:</div>
+          <div>
+            I used a very simple implementation of Kmeans, and it seemed to work
+            sufficiently for my purposes.
+          </div>
+          <a href="https://github.com/charlesli50/cli50-assignment-5"
+            >Github Link</a
+          >
+        </li>
       </ul>
     </div>
   </body>
