--- a/assignments.html
+++ b/assignments.html
@@ -101,6 +101,11 @@
             >Github Link</a
           >
         </li>
+        <li>
+          <div class="text-xl">MIDTERM!:</div>
+          <div>I used a random forest classifier with tfidf vectorizer.</div>
+          <a href="https://github.com/charlesli50/cli50-midterm">Github Link</a>
+        </li>
       </ul>
     </div>
   </body>
