--- a/assignments.html
+++ b/assignments.html
@@ -106,6 +106,24 @@
           <div>I used a random forest classifier with tfidf vectorizer.</div>
           <a href="https://github.com/charlesli50/cli50-midterm">Github Link</a>
         </li>
+        <li>
+          <div class="text-xl">Assignment 6:</div>
+          <div>
+            <iframe
+              width="560"
+              height="315"
+              src="https://www.youtube.com/embed/YV-wHzF1tPs?si=hOmOKSDzLGAmyz3B"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              referrerpolicy="strict-origin-when-cross-origin"
+              allowfullscreen
+            ></iframe>
+          </div>
+          <a href="https://github.com/charlesli50/cli50-assignment-6"
+            >Github Link</a
+          >
+        </li>
       </ul>
     </div>
   </body>
