update assign8 vid

--- a/assignments.html
+++ b/assignments.html
@@ -148,7 +148,7 @@
             <iframe
               width="560"
               height="315"
-              src="https://www.youtube.com/embed/fOvdLeHWApA?si=xVUH7R6bPYnDW3gp"
+              src="https://www.youtube.com/embed/6nM-_Lfx9pg?si=8IFs-YrRqsSbjIEK"
               title="YouTube video player"
               frameborder="0"
               allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
