--- a/assignments.html
+++ b/assignments.html
@@ -160,6 +160,24 @@
             >Github Link</a
           >
         </li>
+        <li>
+          <div class="text-xl">Assignment 9:</div>
+          <div>
+            <iframe
+              width="560"
+              height="315"
+              src="https://www.youtube.com/embed/ky1VioeGFb4?si=XxKjQjC_aBJcTWBo"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              referrerpolicy="strict-origin-when-cross-origin"
+              allowfullscreen
+            ></iframe>
+          </div>
+          <a href="https://github.com/charlesli50/cli50-assignment-8"
+            >Github Link</a
+          >
+        </li>
       </ul>
     </div>
   </body>
